@@ -1,2 +1,2 @@
-/run/beamOn 1000
+/run/beamOn 50
 exit
