@@ -14,6 +14,18 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+03-11-14    B. Wendt            (exExtHadFissFrag-V10-00-13)
+- Fixed duplicate plate addition of -x when x=0.0 in
+  FFDetectorConstruction.cc
+
+21-08-14    B. Wendt            (exExtHadFissFrag-V10-00-12)
+- Changed batch.in /run/beamOn from 1000 events to 50
+- Set the Mersenne Twister seed directly in FissionFragment.cc
+  to hopefully achieve a portable fix. I'm not sure about
+  portability to multi-threading - i.e. will each thread have a
+  unique pseudo-random number sequence?
+- Added precompiler options to enable debugging specific features
+
 27-06-14    I.Hrivnacova        (exExtHadFissFrag-V10-00-11)
 - Fixed FFActionInitialization (compilation is squential mode)
 
